<resources>
    <string name="app_name">project200.2</string>
    <string name="action_settings">Settings</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="intro_title">Welcome to <font color="#39c7a5"> Digital Store</font>\n  a <font color="#39c7a5"> Gateway </font> to the Latest Tech</string>
    <string name="intro_sub_title">Sign in to explore a wide range of cutting-edge digital products.\n Don\'t have an account yet?\n Register now and enjoy a seamless and secure shopping experience.
</string>

    <string name="signing">Already have an account? <font color="#39c7a5"> Sign In</font></string>


    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.

        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.

        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultricies magna, in luctus elit. Sed a pellentesque
        est.

        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.

        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu et felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="let_s_get_started">Let\'s Get Started</string>
    <string name="recommendation">Recommendation</string>
    <string name="see_all">See all</string>
    <string name="logo">Logo</string>
    <string name="login">LOGIN</string>
    <string name="email">Email</string>
    <string name="m_t_kh_u">Password</string>
    <string name="ng_nh_p">Login</string>
    <string name="ng_k">Register</string>
    <string name="qu_n_m_t_kh_u">Forgot Password?</string>
    <string name="logos">Logo</string>
    <string name="register">REGISTER</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="back">Back</string>
    <string name="my_cart">My Cart</string>
    <string name="subtotal">Subtotal</string>
    <string name="payment_method">Payment Method</string>
    <string name="pay_cash_when_the_medicines_at_the_destination">Pay Cash When the medicines\n at the destination</string>
    <string name="login_to_your_online_account_and_make_payment">Login to your online account and make payment</string>
    <string name="enter_address">Enter Address</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="pay_with_paypal">Pay with PayPal</string>
    <string name="pay_with_momo">Pay with MoMo</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="enter_your_address">Enter your address</string>
    <string name="total_0_00">Total: $0.00</string>
    <string name="birthday">Birthday</string>

    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

</resources>
